[tool.poetry]
name = "xhca"
version = "0.1.0"
description = ""
authors = ["Aldrin <DrinMontana@acm.org>"]

[tool.poetry.dependencies]
python = "^3.7"
popper = "^2.1"
scanpy = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
